--- a/10OptionsPattern/10OptionsPattern.csproj
+++ b/10OptionsPattern/10OptionsPattern.csproj
@@ -4,11 +4,11 @@
     <TargetFramework>net10.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <RootNamespace>_09CommandMediatorCQRSPattern</RootNamespace>
+    <RootNamespace>_10OptionsPattern</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MediatR" Version="14.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="10.0.2" />
   </ItemGroup>
 
 </Project>
